--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <head>
     <title>Discovery</title>
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
