--- a/client/model.html
+++ b/client/model.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <head>
     <title>Discovery</title>
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="format-detection" content="telephone=no">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="model.css">
 </head>
 <body>
