Add viewport option

--- a/client/model.html
+++ b/client/model.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
     <title>Discovery</title>
+    <meta name="viewport">
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="model.css">
