--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="discovery-stylesheet" href="model.css">
+    <link rel="discovery-stylesheet" href="model-loader.css">
     <style>
         html,
         body {
