deploy: cbd53943b7e58e5cde35fb87e78dbd9d337d9476

--- a/default/index.html
+++ b/default/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-    <title>Discovery</title>
+    <title>Untitled model</title>
     <meta charset="utf-8"/>
     <meta name="viewport">
     <meta name="format-detection" content="telephone=no">
