--- a/models/embed.html
+++ b/models/embed.html
@@ -62,6 +62,15 @@
         //         $('#discoveryApp').src = new URL(url, $('#discoveryApp').src);
         //     }, 1000);
         // });
+        // preloader.defineAction('fetchFileSource', (filename) => {
+        //     const content = 'console.log("hello worlld")';
+        //     return {
+        //         mime: 'application/javascript',
+        //         binary: false,
+        //         content: content,
+        //         size: content.length,
+        //     }
+        // });
 
         return () => {
             $('#layout').classList.remove('preloader');
