Add setPageHash() method for preloader embed API

--- a/models/embed.html
+++ b/models/embed.html
@@ -46,6 +46,7 @@
         });
 
         preloader.setRouterPreventLocationUpdate(true);
+        // preloader.setPageHash('#report');
 
         // override model navigation logic
         // preloader.defineAction('openModel', (slug, url) => {
